# sae5_graphes

./: README.md  pyproject.toml
Document/: README.md
back/: pyproject.toml
back/src/sae5_graphes/: gui.py  main.py  models.py  routes.py
back/tests/: test.py  testapi.py
front/: README.md  angular.json  package-lock.json  package.json
front-nextjs/: package-lock.json  package.json  tailwind.config.ts
front-nextjs/src/app/: globals.css  layout.tsx  page.tsx
front-nextjs/src/components/: ColorButtons.tsx  Hexagon.tsx  HexagonGrid.tsx  Toolbar.tsx
front/src/: index.html  main.ts  styles.css
front/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
front/src/app/action-buttons/: action-buttons.component.html  action-buttons.component.ts
front/src/app/color-buttons/: color-buttons.component.css  color-buttons.component.html  color-buttons.component.ts
front/src/app/grid-dimensions/: grid-dimensions.component.html  grid-dimensions.component.spec.ts  grid-dimensions.component.ts
front/src/app/hexagon-grid/: hexagon-grid.component.css  hexagon-grid.component.html  hexagon-grid.component.spec.ts  hexagon-grid.component.ts
front/src/app/model/: grille.ts
front/src/app/service/: grid.service.ts  grille.service.ts
main/: exceptions.py
main/src/: exceptions.py  gui.py  main.py  models.py
main/src/model/: gui.py
src/model/: gui.py  sommet.py
src/sae5_graphes/: __init__.py  api.py  gui.py  main.py  routes.py
test/: test.py
tests/: test.py
tkinter/src/: gui.py  models.py
web/back/: pyproject.toml
web/back/src/sae5_graphes/: exceptions.py
web/back/tests/: test.py  testapi.py
web/front/: angular.json  package.json
web/front/src/: index.html  main.ts  styles.css
web/front/src/app/: app.component.css  app.component.html
web/front/src/app/action-buttons/: action-buttons.component.css  action-buttons.component.html
web/front/src/app/model/: grid.ts
(+7 files in other folders)
